# PyJpegtran

./: README.md  example.py  jpegtran.py  pyproject.toml
